# AbsurdLog

./: .gitignore  CMakeLists.txt  premake5.lua
.github/workflows/: semantic-release.yml
example/: main.c
src/: absurdLog.c  absurdLog.h
